# channelflow

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  INSTALL.md  README.md  config.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
bundled/: CMakeLists.txt
cfbasics/: CMakeLists.txt  arglist.h  brent.h  cfarray.h  cfbasics.h  cfvector.h  complexdefs.h  mathdefs.h
channelflow/: CMakeLists.txt  bandedtridiag.cpp  bandedtridiag.h  basisfunc.cpp  basisfunc.h  cfdsi.cpp  cfdsi.h  cfmpi.cpp  cfmpi.h  chebyshev.cpp  chebyshev.h  chflowmain.cpp  config.h.cmake  diffops.cpp  diffops.h  dns.cpp  dns.h  dnsalgo.cpp  dnsalgo.h  dnsflags.cpp  dnsflags.h  flowfield.cpp  flowfield.h  helmholtz.cpp  helmholtz.h  laurettedsi.cpp  laurettedsi.h  nse.cpp  nse.h  periodicfunc.cpp  periodicfunc.h  poissonsolver.cpp  poissonsolver.h  realprofile.cpp  realprofile.h  realprofileng.cpp  realprofileng.h  symmetry.cpp  symmetry.h  tausolver.cpp  (+5 more)
cmake/: check_mpi_compiles.cmake  compiler_helper.cmake  target_helper.cmake  test_helper.cmake
cmake/Modules/: FindFFTW.cmake
examples/: CMakeLists.txt  couette.cpp
modules/ilc/: CMakeLists.txt  ilc.cpp  ilc.h  ilcdsi.cpp  ilcdsi.h  ilcflags.cpp  ilcflags.h  obe.cpp  obe.h
modules/ilc/examples/: CMakeLists.txt  benchmark_ilc.cpp
modules/ilc/programs/: CMakeLists.txt  ilc_addbaseflow.cpp  ilc_continuesoln.cpp  ilc_edgetracking.cpp  ilc_findeigenvals.cpp  ilc_findsoln.cpp  ilc_simulateflow.cpp
modules/ilc/tests/: CMakeLists.txt  ilc_timeIntegrationTest.cpp
modules/ilc/tests/data/: tfinal.nc  tinit.nc  ufinal.nc  uinit.nc
nsolver/: CMakeLists.txt  arnoldi.cpp  arnoldi.h  bicgstab.cpp  bicgstab.h  bicgstabl.h  continuation.cpp  continuation.h  dsi.cpp  dsi.h  eigenvals.cpp  eigenvals.h  fgmres.cpp  fgmres.h  gmres.cpp  gmres.h  lanczos.cpp  lanczos.h  multiShootingDSI.cpp  multiShootingDSI.h  newton.cpp  newton.h  newtonalgorithm.cpp  newtonalgorithm.h  nsolver.h
programs/: CMakeLists.txt  continuesoln.cpp  edgetracking.cpp  findeigenvals.cpp  findsoln.cpp  simulateflow.cpp
python-wrapper/: CMakeLists.txt  cfwrapper.cpp
python-wrapper/tests/: CMakeLists.txt  pythonWrapperTest.py.in
share/qa/: build_test.sh  compute_coverage.sh  style_test.sh  unit_and_integration_test.sh
tests/: CMakeLists.txt  chebyTest.cpp  dnsOrrsommTest.cpp  dnsParabolaTest.cpp  dnsSinusoidTest.cpp  dnsZeroTest.cpp  findsolnTest.cpp  helmholtzTest.cpp  ioTest.cpp  laminarTest.cpp  lauretteTest.cpp  nsolvertest.cpp  orrsommTest.cpp  os_ueig10_65.bf  poissonTest.cpp  pressureTest.cpp  realprofileTest.cpp  tausolverTest.cpp  testbsymm.cpp  timeIntegrationTest.cpp  tridiagTest.cpp  vector2fieldTest.cpp
tests/data/: eq.nc  os_omega10_65.cmplx  os_peig10_65.asc  os_ueig10_65.asc  sigmabest.asc  ufinal.nc  uinit.nc
tests/gtest/: CMakeLists.txt  arnolditest.cpp  cfbasicstest.cpp  lanczostest.cpp  msDSItest.cpp  periodicfunctest.cpp  timesteptest.cpp
tools/: CMakeLists.txt  L2op.cpp  addfields.cpp  benchmark.cpp  changegrid.cpp  diffop.cpp  extrapolatefields.cpp  fieldconvert.cpp  fieldprops.cpp  findsymmetries.cpp  optphaseshift.cpp  perturbfield.cpp  pressure.cpp  randomfield.cpp  symmetrize.cpp  symmetryop.cpp
